# LiteTraining

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README copy.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: lint.yml
config/: clearml.yaml  config.yaml  optuna.yaml
dataset_modules/: augmentations.py  base_dataset.py  folder_image_dataset.py  image_data_module.py  image_params.py  utils.py
examples/classification/butterfly_classification/: butterfly.yaml  butterfly_image_classification.ipynb
examples/environment_preparation/: PIXI_SETUP.md  TASK_SETUP_PIXI.md
losses/: focal_loss.py  utils.py  weighted_cross_entropy.py
models/: image_classification_module.py  models.py  optim_config.py
scripts/: install_dependencies.sh
toolkit/: agent_utils.py  callbacks.py  clearml_dataset.py  clearml_utils.py  count_classes.py  csv_to_imagefolder.py  custom_cli.py  custom_lighting_cli.py  env_loader.py  folder_manager.py  logging_utils.py  metrics.py  optuna_tuner.py  predict_functions.py  utils.py  warnings_handler.py
