[project]
name = "app"
requires-python = "== 3.11"
version = "0.1.0"
dependencies = ["cylimiter==0.4.2", "jsonargparse[signatures]", "tensorboard==2.19.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.4"

[tool.pixi.pypi-dependencies]
app = { path = ".", editable = true }


[tool.pixi.tasks]
black = "black ."
pylint = "pylint ."
mypy = "mypy ."
isort = "isort ."
lint = { depends-on = ["black", "isort", "pylint", "mypy"] }


[tool.pixi.environments]
default = { features = ["gpu"], solve-group = "default" }
cpu = { features = ["cpu"], solve-group = "cpu" }
dev = { features = ["dev", "cpu"], solve-group = "cpu" }
dev-gpu = { features = ["dev", "gpu"], solve-group = "default" }
clearml = { features = ["clearml"], solve-group = "clearml", no-default-feature = true}

[tool.pixi.dependencies]
torchvision = "==0.20.1"
torchaudio = "==2.5.1"
pytorch-lightning = "==2.5.0"
optuna = "==4.2.0"
datasets = "==3.2.0"
transformers = "==4.48.3"
python-dotenv = "==1.0.1"
albumentations = "==2.0.4"
scikit-learn = "==1.6.1"
seaborn = "==0.13.2"
numba = "==0.61.0"
clearml = ">=1.17.1,<2"

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = "==2.5.1"

[tool.pixi.feature.cpu.dependencies]
pytorch = "==2.5.1"

[tool.pixi.feature.dev.dependencies]
pylint = "==3.3.4"
pre-commit = "==4.1.0"
mypy = "==1.15.0"
types-pyyaml = "==6.0.12.20241230"
pytest-mock = "==3.14.0"
isort = "==6.0.0"

[tool.pixi.feature.clearml.dependencies]
clearml-agent = "==1.9.0"
setuptools = "==75.8.0"

[tool.pixi.feature.dev.pypi-dependencies]
black = {version = ">=25.1.0,<26", extras = ["jupyter"]}

[tool.isort]
skip = [".pixi", ".vscode"]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
